--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
+  "name": "first-micro-project",
+  "version": "1.0.0",
+  "description": "If you are not familiar with linters, read [root level README](../README.md).",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ngufor-emmanuella/first-micro-project.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ngufor-emmanuella/first-micro-project/issues"
+  },
+  "homepage": "https://github.com/Ngufor-emmanuella/first-micro-project#readme",
   "devDependencies": {
-    "hint": "^6.2.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+    "hint": "^6.2.0"
   }
 }
